Fixed the valid issues discovered by using FindBugs.